--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,40 +27,28 @@ jobs:
     steps:
 
     - name: Checkout code
-
       uses: actions/checkout@v3
 
 
     - name: Set up Docker Buildx
-
       uses: docker/setup-buildx-action@v3
 
 
     - name: Log in to GitHub Container Registry
-
       uses: docker/login-action@v3
 
       with:
-
         registry: ghcr.io
-
         username: ${{ github.repository_owner }}
-
         password: ${{ secrets.GITHUB_TOKEN }}
 
 
     - name: Build and push Docker image
-
       uses: docker/build-push-action@v5
 
       with:
-
         context: .
-
         push: true
-
         tags: |
-
           ghcr.io/mahmoudkhairym/getting_started:latest
-
-          ghcr.io/mahmoudkhairym/getting_started:${{github.sha}}
+          ghcr.io/mahmoudkhairym/getting_started:${{github.sha}}.
